@@ -1,0 +1,4 @@
+[[template id=plugin name=link core=1 author="[[Joey]]"]]
+[[tag type/link]]
+
+This plugin implements standard [[WikiLinks|WikiLink]].
